# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phoenix-parser"
version = "0.1.0"
authors = [
  { name="shalyhinpavel", email="shalyhinpavel@gmail.com" },
]
description = "An open, more reliable architecture for parsing LLM output."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["llm", "parser", "json", "semantic-parsing", "ai", "nlp", "pydantic"]

dependencies = [
    "pydantic"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]

[project.urls]
"Homepage" = "https://github.com/shalyhinpavel/phoenix"
"Bug Tracker" = "https://github.com/shalyhinpavel/phoenix/issues"
